# GPT-interacter

./: .gitignore  app.py  doc_extractor.py  fake_data_generator.py  faker.py  pinger.py  pyproject.toml  readme.md
app/: app.py
app/static/: title.css
app/templates/: analysis.html  analyze_cv.html  title.html
backend/: app.py
docker-containers/: dockerfile
fake_data/fake_cv/: resume_template.docx
frontend/markup/: analyze_cv.html  index.html  title.html
frontend/style/: analyze_cv.css  index.css
