[tool.poetry]
name = "application-package"
version = "0.1.0"
description = ""
authors = ["Ali"]
readme = "README.md"
packages = [{include = "application_package"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
httpx = "^0.23.3"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
